--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "run-p -l type-check build:prod"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.25.5",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
